2006-07-28  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/main-window.c: (initialize_main_window),
	(run_main_window):
	* src/fe-gnome/navigation-tree.c: (navigation_tree_init),
	(navigation_tree_create_new_network_entry),
	(navigation_tree_create_new_channel_entry), (server_context),
	(channel_context), (navigation_selection_changed):
	* src/fe-gnome/navigation-tree.h:
	- Set action sensitivity instead of messing with the proxy widgets
	directly. Bug #348968.

2006-07-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/fe-gnome/fe-gnome.c: (fe_args):
	- Use PACKAGE as gnome app ID. Bug #348868.

Thu Jul 27 21:21:54 CEST 2006  Xavier Claessens <xclaesse@gmail.com>

	* src/common/dbus/example.py:
	  - Change org.xchat. to org.xchatgnome.
	* src/common/dbus/dbus-plugin.c:
	  - Set PVERSION to "" like that the dbus plugin doesn't appear in
	    plugin list anymore.
	* configure.ac:
	  - DBus plugin depends on dbus and dbus-glib >=0.60.

Thu Jul 27 20:29:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	  - Make IRC command completion case unsensitive.
	  
Thu Jul 27 18:48:31 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* data/preferences-dialog.glade:
	  - HIG improvements: don't display preferences window in the
	    windows list and make it transient.

2006-07-27  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/fe-gnome.c: (fe_args), (fe_init), (fe_cleanup):
	  - Drop unnecessary code to init gnome-vfs and load/store the accel
	    map. Bug #348868.

2006-07-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/common/dbus/Makefile.am:
	* src/common/dbus/dbus-plugin.c:
	  - Fix the build in the builddir != srcdir case. Bug #348867.

Sun Jul 23 17:59:55 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	D plugins/dbus:
	D plugins/dbus/Makefile.am:
	D plugins/dbus/README:
	D plugins/dbus/dbus-plugin.c:
	D plugins/dbus/dbus-plugin.xml:
	D plugins/dbus/example.c:
	D plugins/dbus/marshallers.list: